OOR-CORS: OriginPolicyThrottle unit tests should not make network requests

In the unit tests, network stack is not initialized correctly, and tests
can not make actual network requests. If a request is made, IO thread
checkers will fire. This does not happen by chance in the current code,
but once OOR-CORS is enabled, timing is changed and it happens.

This patch adds an interface to set URLLoaderFactory for testing
OriginPolicyThrottle, and sets TestURLLoaderFactory in required tests.

Bug: 903077
Change-Id: Ife09b0e509280743852bbed4c748b05e68861a3f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1514454
Reviewed-by: Daniel Vogelheim <vogelheim@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Kinuko Yasuda <kinuko@chromium.org>
Auto-Submit: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#639458}