content/browser/frame_host/origin_policy_throttle.h
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/macros.h"
 #include "base/memory/scoped_refptr.h"
 #include "content/public/browser/navigation_throttle.h"
+#include "services/network/public/mojom/url_loader_factory.mojom.h"
 
 class GURL;
 
@@ -77,6 +78,11 @@ class CONTENT_EXPORT OriginPolicyThrottle : public NavigationThrottle {
   static KnownVersionMap& GetKnownVersionsForTesting();
 
   void InjectPolicyForTesting(const std::string& policy_content);
+
+  void SetURLLoaderFactoryForTesting(
+      std::unique_ptr<network::mojom::URLLoaderFactory>
+          url_loader_factory_for_testing);
+
   static PolicyVersionAndReportTo
   GetRequestedPolicyAndReportGroupFromHeaderStringForTesting(
       const std::string& header);
@@ -114,6 +120,9 @@ class CONTENT_EXPORT OriginPolicyThrottle : public NavigationThrottle {
   // We may need the SimpleURLLoader to download the policy. The loader must
   // be kept alive while the load is ongoing.
   std::unique_ptr<network::SimpleURLLoader> url_loader_;
+
+  std::unique_ptr<network::mojom::URLLoaderFactory>
+      url_loader_factory_for_testing_;
 
   DISALLOW_COPY_AND_ASSIGN(OriginPolicyThrottle);
 };
